queue improvements and optimizations