@@ -23,6 +23,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation libs.slf4j.api
     runtimeOnly libs.logback.classic
+    implementation 'org.agrona:agrona:2.4.1'
     testImplementation 'org.openjdk.jmh:jmh-core:1.37'
     testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
     jmh 'org.openjdk.jmh:jmh-core:1.23'
@@ -40,6 +41,10 @@ spotless {
 
 test {
     useJUnitPlatform()
+    jvmArgs = [
+            '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.util=ALL-UNNAMED'
+    ]
 }
 
 jmh {
